tests/baselines/reference/superWithTypeArgument2.errors.txt
tests/cases/compiler/superWithTypeArgument2.ts(7,14): error TS2754: 'super' may not use type arguments.
tests/cases/compiler/superWithTypeArgument2.ts(7,15): error TS2558: Expected 0 type arguments, but got 1.


==== tests/cases/compiler/superWithTypeArgument2.ts (2 errors) ====
    class C<T> {
        foo: T;
    }
    
    class D<T> extends C<T> {
        constructor(x) {
            super<T>(x);
                 ~~~
!!! error TS2754: 'super' may not use type arguments.
                  ~
!!! error TS2558: Expected 0 type arguments, but got 1.
        }
    }